fix: change YAML string delimiter in Jenkinsfile for consistency

--- a/Progect/Jenkinsfile
+++ b/Progect/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     kubernetes {
-      yaml """
+      yaml '''
 apiVersion: v1
 kind: Pod
 metadata:
@@ -59,7 +59,7 @@ spec:
       volumeMounts:
         - name: workspace-volume
           mountPath: /home/jenkins/agent
-"""
+'''
       defaultContainer 'git-tools'
     }
   }
